--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,9 +38,11 @@
 <app-carousal *ngIf="router.url=='/'"></app-carousal>
 
 <app-flip *ngIf="router.url=='/'"></app-flip>
-<app-review *ngIf="router.url=='/'"></app-review>
 
 <app-imagegallery *ngIf="router.url=='/'"></app-imagegallery>
+
+
+
 
 <app-video *ngIf="router.url=='/'"></app-video>
 <br>
@@ -157,17 +159,21 @@
           <p>
             <i class="fas fa-home mr-3"></i> Butwal, Sukkhanagar, Nepal</p>
           <p>
-            <i class="fas fa-envelope mr-3"></i> suman.paudel@gmail.com</p>
+            <i class="fas fa-envelope mr-3"></i> suman.chhetri@gmail.com</p>
           <p>
-            <i class="fas fa-phone mr-3"></i> + 977-9857021367</p>
+            <i class="fas fa-phone mr-3"></i> + 977-9867439783</p>
          
   
         </div>
         <!-- Grid column -->
+
   
       </div>
       <!-- Grid row -->
   
+    </div>
+    <div>
+      <a mat-raised-button href="https://www.google.com/maps/place/ENT+Nepal+(Dr.+Suman+Paudel)/@27.6971295,83.4640886,17z/data=!4m7!3m6!1s0x39968763d5ac42d5:0x7738ce0eac2965c3!8m2!3d27.6971295!4d83.4662773!9m1!1b1" target="_blank" style="color:white;font-size: large; padding-left: 15vh;">View all reviews</a>
     </div>
     <!-- Footer Links -->
   
@@ -177,5 +183,7 @@
       
     </div>
     <!-- Copyright -->
+
+    
   
   </footer>
