--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -30,7 +30,7 @@ fxLayoutGap.xs="0">
         <i class="fa fa-volume-control-phone" style="font-size:36px;color:steelblue;"></i>
 </div>
 <div class="col-md-11">
-        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">977-9857021367/9857026332</p>
+        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">+977-9867439783</p>
 
 </div>
 </div>
@@ -40,7 +40,7 @@ fxLayoutGap.xs="0">
             <i class="fa fa-envelope" style="font-size:36px ;color:steelblue;"></i>
     </div>
     <div class="col-md-11">
-            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.paudel@gmail.com</p>
+            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.chhetri@gmail.com</p>
 
     </div>
 
@@ -79,7 +79,7 @@ fxLayoutGap.xs="0">
             <i class="fa fa-volume-control-phone" style="font-size:36px;color:steelblue;"></i>
     </div>
     <div class="col-md-11">
-            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">977-9857021367/9857026332</p>
+            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">+977-9867439783</p>
     
     </div>
     </div>
@@ -89,7 +89,7 @@ fxLayoutGap.xs="0">
                 <i class="fa fa-envelope" style="font-size:36px ;color:steelblue;"></i>
         </div>
         <div class="col-md-11">
-                <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.paudel@gmail.com</p>
+                <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.chhetri@gmail.com</p>
     
         </div>
     
