--- a/src/app/appointment/appointment.component.scss
+++ b/src/app/appointment/appointment.component.scss
@@ -9,8 +9,14 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% auto;
     z-index: -2;
     
     background-color: transparent;
 }
+@media screen and (max-width: 768px) {
+	.parallax {
+		background-attachment: inherit;
+  }
+}
+ 
