--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,14 +70,11 @@
             
             <!-- Twitter -->
             
-            <a href="#"> <i class="fa fa-twitter-square" style="font-size:36px;padding-left:2vh;color:white;"></i></a>
-          
-            <!-- Google +-->
-            <a href="#"> <i class="fa fa-google" style="font-size:36px;padding-left:2vh;color:white;"></i></a>
+           
             <!--Linkedin -->
-            <a href="#">  <i class="fa fa-linkedin-square" style="font-size:36px;padding-left:2vh;color:white;"></i></a>
+            <a href="https://www.linkedin.com/in/dr-suman-paudel-2a5a80129" target="_blank">  <i class="fa fa-linkedin-square" style="font-size:36px;padding-left:5vh;color:white;"></i></a>
             <!--Instagram-->
-            <a href="https://www.youtube.com/channel/UCmsicjdMLspOsCQgHWwiU1w" target="_blank">  <i class="fa fa-youtube" style="font-size:36px;padding-left:2vh;color:white;"></i></a>
+            <a href="https://www.youtube.com/channel/UCmsicjdMLspOsCQgHWwiU1w" target="_blank">  <i class="fa fa-youtube" style="font-size:36px;padding-left:5vh;color:white;"></i></a>
   
           </div>
           <!-- Grid column -->
@@ -99,10 +96,9 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
   
           <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Places served by Dr.Suman Paudel</h6>
+          <h6 class="text-uppercase font-weight-bold">Place served by Dr.Suman Paudel</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-          <p><li>Shakshi clinic,Butwal</li>
-          <li>Crimson hospital,Butwal</li></p>
+          <p>Vedanta ENT Care Center</p>
   
         </div>
         <!-- Grid column -->
@@ -157,9 +153,9 @@
           <h6 class="text-uppercase font-weight-bold">Get in touch</h6>
           <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
           <p>
-            <i class="fas fa-home mr-3"></i> Butwal, Sukkhanagar, Nepal</p>
+            <i class="fas fa-home mr-3"></i> Butwal,Nepal</p>
           <p>
-            <i class="fas fa-envelope mr-3"></i> suman.chhetri@gmail.com</p>
+            <i class="fas fa-envelope mr-3"></i> entnepal17@gmail.com</p>
           <p>
             <i class="fas fa-phone mr-3"></i> + 977-9867439783</p>
          
@@ -173,7 +169,7 @@
   
     </div>
     <div>
-      <a mat-raised-button href="https://www.google.com/maps/place/ENT+Nepal+(Dr.+Suman+Paudel)/@27.6971295,83.4640886,17z/data=!4m7!3m6!1s0x39968763d5ac42d5:0x7738ce0eac2965c3!8m2!3d27.6971295!4d83.4662773!9m1!1b1" target="_blank" style="color:white;font-size: large; padding-left: 15vh;">View all reviews</a>
+      <a mat-raised-button href="https://www.google.com/maps/place/ENT+Nepal+(Dr.+Suman+Paudel)/@27.6971295,83.4640886,17z/data=!4m7!3m6!1s0x39968763d5ac42d5:0x7738ce0eac2965c3!8m2!3d27.6971295!4d83.4662773!9m1!1b1" target="_blank" style="color:white;font-size: large; padding-left: 20vh;">View all reviews</a>
     </div>
     <!-- Footer Links -->
   
