--- a/src/app/carousal/carousal.component.html
+++ b/src/app/carousal/carousal.component.html
@@ -18,12 +18,56 @@
             <p>All types of problem in Ear.</p>
           </div>
         </div>
+        <div class="item">
+          <img src="/assets/image/vertigo.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Vertigo problem</h1>
+            <p>Vertigo and Dizziness problems.</p>
+          </div>
+        </div>
   
         <div class="item">
           <img src="/assets/image/nose.jpg" alt="Chicago" >
           <div class="carousel-caption">
             <h1>Nose</h1>
             <p>All types of problem in Nose.</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/assets/image/Head.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Headache problem</h1>
+            <p>Types of headache are inspected.</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="/assets/image/headneck.png" alt="Chicago" >
+          
+        </div>
+
+        <div class="item">
+          <img src="/assets/image/parathyroid.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Parathyroid</h1>
+            <p>All types parathyroid problems.</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/assets/image/sleep.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Sleep Apnea & Snoring Treatment</h1>
+            
+            
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/assets/image/audiology.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Audiology Services</h1>
+            <p>Guidance to check the audio of patient.</p>
           </div>
         </div>
       
