--- a/src/app/flip/flip.component.html
+++ b/src/app/flip/flip.component.html
@@ -153,10 +153,10 @@ fxLayoutGap.xs="0">
         fxLayoutGap="10%"
         fxLayoutGap.xs="0">
         <mat-card fxFlex="50%">
-            <h1>Ear Diseases</h1>
+            <h1 data-aos="fade-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Ear Diseases</h1>
             <hr class="line1">
             <br><br>
-            <p>Diagnosis and treatment regarding:
+            <p data-aos="fade-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">Diagnosis and treatment regarding:
 
               Ear infections, Hearing Loss, Tinnitus, Vertigo, Foreign Body Ear, Ear wax, Ear pain, Ear itching.
               
