--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -1,7 +1,14 @@
 <div class="parallax"></div>
  <br><br>
  <h1 style="text-align:center;background-color:steelblue;color:white;height:50px;">Book An Appointment</h1>
- <br><br>
+ <br>
+ <h5 data-aos="fade-left" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Note:
+kindly make an appointment time from 8 am to 8pm
+  and also contact me at +977-9867439783 .</h5>
+ <br>
+
+ 
+ 
 <div class="card">
         <div class="card-body">
           <form [formGroup]="angForm" novalidate>
@@ -16,10 +23,14 @@
               <label class="col-md-4">Email </label>
               <input type="email" class="form-control" placeholder="Enter Email" id="email" formControlName="Email" 
               #Email >
-              
-            
-           
-                  </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-md-4">Address </label>
+              <input type="address" class="form-control" placeholder="Enter your address" id="address" formControlName="Address" 
+              #address >
+            </div>
+
             <div class="form-group">
               <label class="col-md-4">Phone</label>
               <input type="text" class="form-control" placeholder="Enter Phone no." id="phone"  formControlName="Phone" 
