--- a/src/app/appointment/appointment.component.scss
+++ b/src/app/appointment/appointment.component.scss
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url("https://thumbs.dreamstime.com/z/appointment-15237454.jpg");
+    background-image: url("https://www.wallnoefer.it/fileadmin/_processed_/csm_terminvereinbarung_902fa70775.jpg");
   
     /* Set a specific height */
     min-height: 400px;
