--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,20 +8,20 @@ fxLayoutGap="10%"
 fxLayoutGap.xs="0">
 <mat-card fxFlex="50%">
 
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="330" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=sakshi%20pharmacy,butwal&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator by <a href="https://www.embedgooglemap.org">embedgooglemap.org</a></div><style>.mapouter{position:relative;text-align:right;height:350px;width:330px;}.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:330px;}</style></div>
-<br> <u><b>Sakshi Pharmacy</b></u>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=ENT%20Nepal%20(Dr.%20Suman%20Paudel),%20address&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.org">embed google maps</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+<br> <u><b>Vedanta ENT Care Center</b></u>
 <br><ngb-rating [rate]="5"></ngb-rating>
 
 </mat-card>
 <mat-card fxFlex="50%" data-aos="fade-left" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">
-    <br><br><br>
+    <br><br><br><br><br>
     <div class="row">
     <div class="col-md-1">
         <i class="fa fa-map-marker" style="font-size:36px;color:steelblue;"></i>
     </div>
     <div class="col-md-11">
         
-        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">Hospital Line, Butwal</p>
+        <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">Maitri Path, Butwal</p>
     </div>
 </div>
 <br><br>
@@ -40,7 +40,7 @@ fxLayoutGap.xs="0">
             <i class="fa fa-envelope" style="font-size:36px ;color:steelblue;"></i>
     </div>
     <div class="col-md-11">
-            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.chhetri@gmail.com</p>
+            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray;padding-left: 1vh;">entnepal17@gmail.com</p>
 
     </div>
 
@@ -48,51 +48,3 @@ fxLayoutGap.xs="0">
 </mat-card>
 </div>
 
-<div class="container"
-fxLayout
-fxLayout.xs="column"
-
-fxLayoutGap="10%"
-fxLayoutGap.xs="0">
-<mat-card fxFlex="50%">
-
-
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="330" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=crimson%20hospital,butwal&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>Google Maps Generator by <a href="https://www.embedgooglemap.org">embedgooglemap.org</a></div><style>.mapouter{position:relative;text-align:right;height:350px;width:330px;}.gmap_canvas {overflow:hidden;background:none!important;height:350px;width:330px;}</style></div>
-
-        <br> <u><b>Crimson Hospital</b></u>
-        <br><ngb-rating [rate]="4"></ngb-rating>
-</mat-card>
-<mat-card fxFlex="50%" data-aos="fade-left" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">
-        <br><br><br>
-        <div class="row">
-        <div class="col-md-1">
-            <i class="fa fa-map-marker" style="font-size:36px;color:steelblue;"></i>
-        </div>
-        <div class="col-md-11">
-            
-            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">Manigram,Tilotamma, Butwal</p>
-        </div>
-    </div>
-    <br><br>
-    <div class="row">
-    <div class="col-md-1">
-            <i class="fa fa-volume-control-phone" style="font-size:36px;color:steelblue;"></i>
-    </div>
-    <div class="col-md-11">
-            <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">+977-9867439783</p>
-    
-    </div>
-    </div>
-    <br><br>
-    <div class="row">
-        <div class="col-md-1">
-                <i class="fa fa-envelope" style="font-size:36px ;color:steelblue;"></i>
-        </div>
-        <div class="col-md-11">
-                <p style="font-size:2.5vh;font-style:italic;padding-top:2vh;color:gray">suman.chhetri@gmail.com</p>
-    
-        </div>
-    
-    </div>
-    </mat-card>
-</div>
