--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -55,7 +55,7 @@ kindly make an appointment time from 8 am to 8pm
                           </div>
                           <p class="msg_success" style="text-align: center;color:red;">{{ msg }}</p>
             <div class="form-group">
-              <button (click) = "addInfo(Name.value, Email.value, Phone.value,Time.value,Message.value)" type="submit" class="btn btn-primary" style="margin:auto;display:block;width:30vh;">Submit</button>
+              <button (click) = "addInfo(Name.value, Email.value,Address.value Phone.value,Time.value,Message.value)" type="submit" class="btn btn-primary" style="margin:auto;display:block;width:30vh;">Submit</button>
             </div>
           </form>
         </div>
