--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,6 +5,7 @@
     <tr>
         <th> Name</th>
         <th>Email</th>
+        <th>Address</th>
         <th>Phone no.</th>
         <th> Best Time</th>
         <th>Message</th>
@@ -17,6 +18,7 @@
         <tr *ngFor="let info of info">
             <td>{{ info.Name }}</td>
             <td>{{ info.Email }}</td>
+            <td>{{ info.Address }}</td>
             <td>{{ info.Phone }}</td>
             <td>{{ info.Time }}</td>
             <td>{{ info.Message }}</td>
