--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -28,7 +28,7 @@ kindly make an appointment time from 8 am to 8pm
             <div class="form-group">
               <label class="col-md-4">Address </label>
               <input type="address" class="form-control" placeholder="Enter your address" id="address" formControlName="Address" 
-              #address >
+              #Address >
             </div>
 
             <div class="form-group">
