--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,10 @@
   <img src="/assets/image/profile.jpeg" alt="John" style="width:100%">
   <h1>Dr.Suman Paudel</h1>
   <p class="title">ENT Specialist</p>
-  <p>Dr Suman Paudel is a fully accredited ENT / Head and Neck Surgeon. He qualified from the prestigious Post Graduate Institute of Medical  education and Research in Chandigarh, India.He has been associated with Society of Otolaryngologists of Nepal since 2017.</p>
+  <p>Dr. Suman Paudel is a fully accredited ENT / Head and Neck Surgeon. He qualified from the prestigious Post Graduate Institute of Medical Education and Research in Chandigarh, India in the year 2016. He has been working in Chitwan Medical College and Teaching Hospital as a Lecturer since January 2017 looking after patients in  Out patient department, admitted patients in wards and undergoing ENT surgeries. As a part of teaching hospital, Dr. Paudel has been indulging himself in teaching MBBS students regarding Otorhinolaryngology both as a lecture and bed side as clinical posting. He has also been indulged in different ENT camps in rural areas of Nepal as part of social initiative to help the needy patients and treating them.
+    Dr. Paudel has been very keen on attending the conferences, CMEs , workshops and staying updated regarding newer advances in the field of Otorhinolaryngology. 
+    <li>Member  of  Society of Otolaryngologists of Nepal since 2017.</li>
+   <li> Member of  ENT UK (United Kingdom)  since 2019</li></p>
   <div style="margin: 24px 0;">
      
     <a href="#"><i class="fa fa-google-square" style="color:blue;"></i></a>  
