--- a/src/app/flip/flip.component.html
+++ b/src/app/flip/flip.component.html
@@ -15,7 +15,7 @@ fxLayoutGap.xs="5%">
 
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="/assets/image/doctor2.jpg" alt="Avatar" style="width:300px;height:300px;">
+        <img src="/assets/image/doctor.jpg" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <h2>Trustable</h2> 
