so far finishing is done

--- a/src/app/appointment/appointment.component.html
+++ b/src/app/appointment/appointment.component.html
@@ -3,8 +3,7 @@
  <h1 style="text-align:center;background-color:steelblue;color:white;height:50px;">Book An Appointment</h1>
  <br>
  <h5 data-aos="fade-left" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Note:
-kindly make an appointment time from 8 am to 8pm
-  and also contact me at +977-9867439783 .</h5>
+  Contact me at +977-9867439783 and kindly make an appointment time from 8 am to 7pm.</h5>
  <br>
 
  
