--- a/src/app/carousal/carousal.component.html
+++ b/src/app/carousal/carousal.component.html
@@ -18,6 +18,22 @@
             <p>All types of problem in Ear.</p>
           </div>
         </div>
+
+        <div class="item">
+          <img src="/assets/image/nose.jpg" alt="Chicago" >
+          <div class="carousel-caption">
+            <h1>Nose</h1>
+            <p>All types of problem in Nose.</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="/assets/image/throat.jpg" alt="New york">
+          <div class="carousel-caption">
+          <h1>Throat Specialist</h1>
+            <p>All types of problem in Throat.</p>
+          </div>
+        </div>
         <div class="item">
           <img src="/assets/image/vertigo.jpg" alt="Chicago" >
           <div class="carousel-caption">
@@ -26,13 +42,7 @@
           </div>
         </div>
   
-        <div class="item">
-          <img src="/assets/image/nose.jpg" alt="Chicago" >
-          <div class="carousel-caption">
-            <h1>Nose</h1>
-            <p>All types of problem in Nose.</p>
-          </div>
-        </div>
+        
 
         <div class="item">
           <img src="/assets/image/Head.jpg" alt="Chicago" >
@@ -47,10 +57,10 @@
         </div>
 
         <div class="item">
-          <img src="/assets/image/parathyroid.jpg" alt="Chicago" >
+          <img src="/assets/image/thyroid.jpg" alt="Chicago" >
           <div class="carousel-caption">
-            <h1>Parathyroid</h1>
-            <p>All types parathyroid problems.</p>
+            <h1>Thyroid</h1>
+            <p>All types thyroid problems.</p>
           </div>
         </div>
 
@@ -67,17 +77,11 @@
           <img src="/assets/image/audiology.jpg" alt="Chicago" >
           <div class="carousel-caption">
             <h1>Audiology Services</h1>
-            <p>Guidance to check the audio of patient.</p>
+            <p>Hearing evaluation and hearing aid services</p>
           </div>
         </div>
       
-        <div class="item">
-          <img src="/assets/image/throat.jpg" alt="New york">
-          <div class="carousel-caption">
-          <h1>Throat Specialist</h1>
-            <p>All types of problem in Throat.</p>
-          </div>
-        </div>
+       
       </div>
   
       <!-- Left and right controls -->
