--- a/src/app/flip/flip.component.html
+++ b/src/app/flip/flip.component.html
@@ -20,7 +20,7 @@ fxLayoutGap.xs="5%">
       <div class="flip-card-back">
         <h2>Trustable</h2> 
         <br><br>
-        <p>Fully trustable doctor dealing with diffrent types of problems of ear,nose,throat organs.</p> 
+        <p>Fully trustable doctor dealing with diffrent types of problems of ear,nose,throat.</p> 
         
       </div>
       
@@ -57,7 +57,7 @@ fxLayoutGap.xs="5%">
         <img src="/assets/image/friendly.jpg" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
-        <h2>Friendly and Talkative</h2> 
+        <h2>Friendly and Caring</h2> 
         <p>Children have a hard time seeing doctors because they feel intimidated by the professional setting. Consequently, you should seek out pediatric ear, nose and throat doctors that are very friendly and talkative. They should be able to sit down and chat with your children about things other than the procedures. </p> 
         
       </div>
@@ -73,7 +73,35 @@ fxLayoutGap.xs="5%">
 
   
 
+  <div class="container"
+  fxLayout
+  fxLayout.xs="column"
+  
+  fxLayoutGap="10%"
+  fxLayoutGap.xs="0">
+  <mat-card fxFlex="50%">
+      <h1 data-aos="fade-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Ear Diseases</h1>
+      <hr class="line1">
+      <br><br>
+      <p data-aos="fade-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">Diagnosis and treatment regarding:
 
+        Ear infections, Hearing Loss, Tinnitus, Vertigo, Foreign Body Ear, Ear wax, Ear pain, Ear itching.
+        
+        Hearing Test , Hearing Aid
+        
+        Surgeries: Endoscopic and microscopic ear surgeries
+        
+        Mastoid surgeries
+
+        
+  
+          </p>
+          </mat-card>
+          <mat-card fxFlex="50%">
+              <img class="image" src="/assets/image/ear.jfif">
+          </mat-card>
+          </div>
+          <br><br><br><br>
   <div class="container"
 fxLayout
 fxLayout.xs="column"
@@ -146,34 +174,7 @@ fxLayoutGap.xs="0">
                 </div>
                 <br><br><br><br>
 
-                <div class="container"
-        fxLayout
-        fxLayout.xs="column"
-        
-        fxLayoutGap="10%"
-        fxLayoutGap.xs="0">
-        <mat-card fxFlex="50%">
-            <h1 data-aos="fade-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Ear Diseases</h1>
-            <hr class="line1">
-            <br><br>
-            <p data-aos="fade-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">Diagnosis and treatment regarding:
-
-              Ear infections, Hearing Loss, Tinnitus, Vertigo, Foreign Body Ear, Ear wax, Ear pain, Ear itching.
-              
-              Hearing Test , Hearing Aid
-              
-              Surgeries: Endoscopic and microscopic ear surgeries
-              
-              Mastoid surgeries
-
-              
-        
-                </p>
-                </mat-card>
-                <mat-card fxFlex="50%">
-                    <img class="image" src="/assets/image/ear.jfif">
-                </mat-card>
-                </div>
+                
                 <br><br><br><br><br><br>
                 
                 
