new video is uploaded

--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -63,6 +63,8 @@ fxLayoutGap.xs="5%">
                                                                               allowfullscreen></iframe>
                                                                             </mat-card>
                                                                             <mat-card fxFlex="25%">
+                                                                              <iframe [src]="safeSrc"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                              allowfullscreen></iframe>
                                                                         
                                                                                 
                                                                                     </mat-card>
