some changes has been made

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a routerLink="home"> <img class="icon" src="/assets/image/icon.jfif" height="50px" width="50px"></a>
+      <a routerLink="home"> <img class="icon" src="/assets/image/unnamed.jpg"height="50px" width="50px"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -18,6 +18,7 @@
             <li><a routerLink="services/ear">Ear</a></li>
             <li><a routerLink="services/nose">Nose</a></li>
             <li><a routerLink="services/throat">Throat</a></li>
+            <li><a routerLink="services/endoscopy">Endoscopy</a></li>
           </ul>
         </li>
         <li><a routerLink="myprofile">Know your doctor</a></li>
@@ -157,7 +158,7 @@
           <p>
             <i class="fas fa-envelope mr-3"></i> entnepal17@gmail.com</p>
           <p>
-            <i class="fas fa-phone mr-3"></i> + 977-9867439783</p>
+            <i class="fas fa-phone mr-3"></i> + 977-9857075922</p>
          
   
         </div>
