--- a/src/app/ear/ear.component.html
+++ b/src/app/ear/ear.component.html
@@ -14,10 +14,21 @@ fxLayoutGap.xs="0">
     <hr class="line">
     <br><br><br>
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-        Ear surgery is the treatment of diseases, injuries, or deformations of the ear by operation with instruments. In some cases surgery is the only treatment to treat diseases, injuries or deformities of the ear's auditory tube, middle ear, inner ear, and auditory and vestibular systems.</p>
+        We expertise on all ear surgeries by both microscopic and endoscopic means such as:
+        Myringoplasty,
+        Tympanoplasty,
+        Ossiculoplasty,
+        Canaloplasty,
+        Myringotomy and Ventilation tube insertion,
+        Mastoid surgeries,
+        Stapedotomy,
+        Excision of mass from EAC and middle ear,
+        Repair of Injuries and deformities of Pinna and External auditory canal.Also,we provide audiology services such as:
+        Pure Tone Audiometry,
+        Tympanometry</p>
         </mat-card>
         <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-            <img src="/assets/image/kaan.jpg">
+            <img class="kan" src="/assets/image/kan.jpg">
         </mat-card>
         </div>
         <br><br><br>
