--- a/src/app/ear/ear.component.scss
+++ b/src/app/ear/ear.component.scss
@@ -15,6 +15,10 @@
     background-color: transparent;
     
 }
+.kan{
+  width: 400px;
+  height: 350px;
+}
 @media screen and (max-width: 768px) {
 	.parallax {
 		background-attachment: inherit;
