--- a/src/app/nose/nose.component.html
+++ b/src/app/nose/nose.component.html
@@ -14,10 +14,19 @@ fxLayoutGap.xs="0">
     <hr class="line">
     <br><br><br>
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-        Nose Surgery include surgical procedures to treat sinus diseases. Advanced endoscopic surgery for sinus and nasal disorders can eliminate the need for external incisions and greater surgical precision. It also include correction of a deviated nasal septum (septoplasty) and for chronic nasal obstruction (congestion).</p>
+        We expertise on dealing with nasal diseases and and nasal surgeries such as:
+        Endoscopic Septoplasty,
+        Endoscopic Sphenopalatine artery ligation,
+        Nasal bone fracture reduction,
+        Rhinoplasty,
+        Surgeries for Snoring and Sleep apnea,
+        Endoscopic Dacryocystorhinostomy,
+        Functional Endoscopic Sinus Surgery,
+        Excision of mass from nasal cavity and PNS,
+        Endoscopic CSF Rhinorrhea repair.</p>
         </mat-card>
         <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-            <img src="/assets/image/nosal.jpg">
+            <img class="nakh" src="/assets/image/nakh1.png">
         </mat-card>
         </div>
         <br><br><br>
