--- a/src/app/nose/nose.component.scss
+++ b/src/app/nose/nose.component.scss
@@ -15,6 +15,10 @@
     background-color: transparent;
     
   }
+  .nakh{
+    width: 400px;
+  height: 330px;
+  }
   @media screen and (max-width: 768px) {
     .parallax {
       background-attachment: inherit;
