--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,14 +4,29 @@
 <u><h1 style="text-align:center">My profile</h1></u>
 <br>
 <div class="card">
-  <img src="/assets/image/profile.jpeg" alt="John" style="width:100%">
-  <h1>Dr.Suman Paudel</h1>
-  <p class="title">ENT Specialist</p>
-  <p>Dr. Suman Paudel is a fully accredited ENT / Head and Neck Surgeon. He qualified from the prestigious Post Graduate Institute of Medical Education and Research in Chandigarh, India in the year 2016. He has been working in Chitwan Medical College and Teaching Hospital as a Lecturer since January 2017 looking after patients in  Out patient department, admitted patients in wards and undergoing ENT surgeries. As a part of teaching hospital, Dr. Paudel has been indulging himself in teaching MBBS students regarding Otorhinolaryngology both as a lecture and bed side as clinical posting. He has also been indulged in different ENT camps in rural areas of Nepal as part of social initiative to help the needy patients and treating them.
-    Dr. Paudel has been very keen on attending the conferences, CMEs , workshops and staying updated regarding newer advances in the field of Otorhinolaryngology. 
-    <li>Member  of  Society of Otolaryngologists of Nepal since 2017.</li>
-   <li> Member of  ENT UK (United Kingdom)  since 2019</li></p>
-  <div style="margin: 24px 0;">
+  <img src="/assets/image/pro.jpg" alt="John" style="width:100%">
+  <h1 class="tit" style="text-align:center">Dr.Suman Paudel</h1>
+  <p class="title" style="text-align:center">ENT Specialist</p>
+  <p>Dr. Suman Paudel is a fully accredited ENT / Head and Neck Surgeon. He qualified from the prestigious Post Graduate Institute of Medical Education and Research in Chandigarh, India in the year 2016. He has been working in Chitwan Medical College and Teaching Hospital as a Lecturer since January 2017 looking after patients in  Out patient department, admitted patients in wards and undergoing ENT surgeries. As a part of teaching hospital, Dr. Paudel has been indulging himself in teaching MBBS students regarding Otorhinolaryngology both as a lecture and bed side as clinical posting. He has also been indulged in different ENT camps in rural areas of Nepal as part of social initiative to help the needy patients and treating them. Dr. Paudel has been very keen on attending the conferences, CMEs , workshops and staying updated regarding newer advances in the field of Otorhinolaryngology.  
+    <br><br>
+    
+  <li>Member  of  <b>Society of Otolaryngologists </b>of Nepal since 2017.</li>
+  <li> Member of  <b>ENT UK (United Kingdom)</b>  since 2019</li>
+  <li>Member of International Working Group on Endoscopic Ear Surgery<b>(IWGEES)</b>  since 2020. </li></p>
+
+  <br><br>
+<div style="text-align:center;">
+  <b>PAPERS PUBLISHED </b>
+</div>
+
+
+
+  
+  <p>
+  <li>Sialocele- A Rare Entity Following Submandibular Gland Excision, Journal of Ear, Nose and Throat Disorders, 2016.</li>
+  <li>Expression of Matrix Metalloproteinases 2 and 9 in Laryngeal Carcinoma and it’s Correlation to short term outcome, Journal of Acta Scientific Otolaryngology, 2020.</li>
+  <li>Osteoid Osteoma of Temporal Bone : A Rare Case Report , Journal of Acta Scientific Otolaryngology, 2020.</li></p>
+  <div style="margin: 24px 0;text-align: center;">
      
     <a href="#"><i class="fa fa-google-square" style="color:blue;"></i></a>  
     <a href="#"><i class="fa fa-linkedin-square" style="padding-left:2vh;color:blue;"></i></a>  
