--- a/src/app/throat/throat.component.html
+++ b/src/app/throat/throat.component.html
@@ -12,12 +12,25 @@ fxLayoutGap.xs="0">
     <hr class="line">
     <br><br><br>
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-        Throat surgery is a treatment of diseases of oral cavity, throat, vocal cord, and larynx. It will be done with the help of microscope and laser.
+        We expertise on dealing with all kind of throat and neck ailments and perform surgeries for the
+same such as:
+Tonsillectomy,
+Adenoidectomy,
+Excision of masses from oral cavity,
+Carcinoma oral cavity,
+Microlaryngeal Surgery for vocal polyp,
+Direct laryngoscopy and Biopsy,
+Laryngectomy,
+Excision of Neck masses,
+Thyroid surgeries,
+Neck dissection,
+Parotid surgeries,
+Submandibular gland excision.
 
 </p>
         </mat-card>
         <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-            <img src="/assets/image/ghati.jpg">
+            <img class="surgery" src="/assets/image/sub.JPG">
         </mat-card>
         </div>
         <br><br><br>
