--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -69,11 +69,36 @@ fxLayoutGap.xs="5%">
                                                                                 
                                                                                     </mat-card>
                                                                                     <mat-card fxFlex="25%">
+                                                                                      <iframe [src]="safeSrc6"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                              allowfullscreen></iframe>
                                                                         
                                                                                         
                                                                                             </mat-card>
                                                                                             
                                                                                                     
                                                                                                             </div>
+                                                                                                            <div class="container"
+                                                                                                            fxLayout
+                                                                                                            fxLayout.xs="column"
+                                                                                                            
+                                                                                                            fxLayoutGap="7%"
+                                                                                                            fxLayoutGap.xs="5%">
+                                                                                                            <mat-card fxFlex="25%">
+                                                                                                            
+                                                                                                            <iframe [src]="safeSrc8"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                  allowfullscreen></iframe>
+                                                                                                                </mat-card>
+                                                                                                                <mat-card fxFlex="25%">
+                                                                                                                  
+                                                                                                            
+                                                                                                                    
+                                                                                                                        </mat-card>
+                                                                                                                        <mat-card fxFlex="25%">
+                                                                                                                          
+                                                                                                                            
+                                                                                                                                </mat-card>
+                                                                                                                                
+                                                                                                                                        
+                                                                                                                                                </div>
                                                                                                            
       </div>
