--- a/src/app/endoscopy/endoscopy.component.scss
+++ b/src/app/endoscopy/endoscopy.component.scss
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url("https://media.healthdirect.org.au/images/banners/w760h217/girl-opening-mouth-sore-throat_h.jpg");
+    background-image: url("https://www.hopkinsmedicine.org/-/media/images/health/2_-treatment/gastroenterology/endoscope-light-hero.ashx?h=500&la=en&mh=500&mw=1300&w=1297&hash=B99C25D36E058C4221F674CDFCEA3C52A1DEFE27");
   
     /* Set a specific height */
     min-height: 400px;
@@ -24,4 +24,3 @@
       background-attachment: inherit;
     }
   }
-   
