--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
             <li><a routerLink="services/ear">Ear</a></li>
             <li><a routerLink="services/nose">Nose</a></li>
             <li><a routerLink="services/throat">Throat</a></li>
-            <li><a routerLink="services/endoscopy">Endoscopy</a></li>
+            <li><a routerLink="services/endoscopy">Throat</a></li>
           </ul>
         </li>
         <li><a routerLink="myprofile">Know your doctor</a></li>
