--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -89,6 +89,8 @@ fxLayoutGap.xs="5%">
                                                                                                                   allowfullscreen></iframe>
                                                                                                                 </mat-card>
                                                                                                                 <mat-card fxFlex="25%">
+                                                                                                                  <iframe [src]="safeSrc11"  frameborder="0" webkitallowfullscreen mozallowfullscreen
+                                                                                                                  allowfullscreen></iframe>
                                                                                                                   
                                                                                                             
                                                                                                                     
