--- a/src/app/ear/ear.component.html
+++ b/src/app/ear/ear.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="parallax"></div>
-<br><br>
+<br><br><br><br>
 
 <div class="container"
 fxLayout
@@ -15,17 +15,16 @@ fxLayoutGap.xs="0">
     <br><br><br>
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
         We expertise on all ear surgeries by both microscopic and endoscopic means such as:
-        Myringoplasty,
-        Tympanoplasty,
-        Ossiculoplasty,
-        Canaloplasty,
-        Myringotomy and Ventilation tube insertion,
-        Mastoid surgeries,
-        Stapedotomy,
-        Excision of mass from EAC and middle ear,
-        Repair of Injuries and deformities of Pinna and External auditory canal.Also,we provide audiology services such as:
-        Pure Tone Audiometry,
-        Tympanometry</p>
+      <li> Myringoplasty</li> 
+      <li> Tympanoplasty</li> 
+        <li> Ossiculoplasty</li> 
+            <li>Canaloplasty</li> 
+                <li>Myringotomy and Ventilation tube insertion</li> 
+                    <li>Mastoid surgeries</li> 
+                        <li>Stapedotomy</li> 
+                            <li>Excision of mass from EAC and middle ear</li> 
+                                <li>Repair of Injuries and deformities of Pinna and External auditory canal.</li> 
+                                   
         </mat-card>
         <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
             <img class="kan" src="/assets/image/kan.jpg">
@@ -34,48 +33,7 @@ fxLayoutGap.xs="0">
         <br><br><br>
 
 
-        <div class="container"
-fxLayout
-fxLayout.xs="column"
-
-fxLayoutGap="10%"
-fxLayoutGap.xs="0">
-<mat-card fxFlex="50%">
-    <h1 data-aos="flip-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Mastoidectomy with Tympanoplasty with ossiculoplasty (titanium/cartilage)</h1>
-    <hr class="line">
-    <br><br><br>
-    <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-       <li> Repair of external and middle ear congenital anomaly</li>
-        <li>Bone Anchored Hearing Ald</li>
-       <li> C.S.F. otorrhoea</li>
-      <li>  Surgery of Meniere's disease</li>
-       <li> Myringotomy with Gromet for otites media with Effusion</li></p>
-        </mat-card>
-        <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-            <div class="row">
-                <div class="col-md-6">
-            <img src="/assets/image/mastoi1.jpg" height="200px" width="200px">
-        </div>
-        <div class="col-md-6">
-                <img src="/assets/image/mastoi2.jpg"height="200px" width="200px">
-            </div>
-
-            </div>
-            <br>
-            <div class="row">
-                    <div class="col-md-6">
-                <img src="/assets/image/mastoi3.jpg"height="200px" width="200px">
-            </div>
-            <div class="col-md-6">
-                    <img src="/assets/image/mastoi4.jpg"height="200px" width="200px">
-                </div>
-    
-                </div>
-            
-        </mat-card>
-        </div>
-
-    <br><br>
+        
 
 
 
