--- a/src/app/nose/nose.component.html
+++ b/src/app/nose/nose.component.html
@@ -15,15 +15,15 @@ fxLayoutGap.xs="0">
     <br><br><br>
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
         We expertise on dealing with nasal diseases and and nasal surgeries such as:
-        Endoscopic Septoplasty,
-        Endoscopic Sphenopalatine artery ligation,
-        Nasal bone fracture reduction,
-        Rhinoplasty,
-        Surgeries for Snoring and Sleep apnea,
-        Endoscopic Dacryocystorhinostomy,
-        Functional Endoscopic Sinus Surgery,
-        Excision of mass from nasal cavity and PNS,
-        Endoscopic CSF Rhinorrhea repair.</p>
+       <li> Endoscopic Septoplasty</li>
+       <li>Endoscopic Sphenopalatine artery ligation</li>
+        <li>Nasal bone fracture reduction</li>
+        <li>Rhinoplasty</li>
+        <li>Surgeries for Snoring and Sleep apnea</li>
+        <li>Endoscopic Dacryocystorhinostomy</li>
+        <li>Functional Endoscopic Sinus Surgery</li>
+        <li>Excision of mass from nasal cavity and PNS</li>
+        <li>Endoscopic CSF Rhinorrhea repair</li></p>
         </mat-card>
         <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
             <img class="nakh" src="/assets/image/nakh1.png">
