--- a/src/app/throat/throat.component.html
+++ b/src/app/throat/throat.component.html
@@ -1,5 +1,5 @@
 <div class="parallax"></div>
-<br><br>
+<br><br><br><br>
 
 <div class="container"
 fxLayout
@@ -14,18 +14,18 @@ fxLayoutGap.xs="0">
     <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
         We expertise on dealing with all kind of throat and neck ailments and perform surgeries for the
 same such as:
-Tonsillectomy,
-Adenoidectomy,
-Excision of masses from oral cavity,
-Carcinoma oral cavity,
-Microlaryngeal Surgery for vocal polyp,
-Direct laryngoscopy and Biopsy,
-Laryngectomy,
-Excision of Neck masses,
-Thyroid surgeries,
-Neck dissection,
-Parotid surgeries,
-Submandibular gland excision.
+<li>Tonsillectomy</li>
+<li>Adenoidectomy</li>
+<li>Excision of masses from oral cavity</li>
+<li>Carcinoma oral cavity</li>
+<li>Microlaryngeal Surgery for vocal polyp</li>
+<li>Direct laryngoscopy and Biopsy</li>
+<li>Laryngectomy</li>
+<li>Excision of Neck masses</li>
+<li>Thyroid surgeries</li>
+<li>Neck dissection</li>
+<li>Parotid surgeries</li>
+<li>Submandibular gland excision</li>
 
 </p>
         </mat-card>
@@ -36,112 +36,7 @@ Submandibular gland excision.
         <br><br><br>
 
 
-        <div class="container"
-fxLayout
-fxLayout.xs="column"
-
-fxLayoutGap="10%"
-fxLayoutGap.xs="0">
-<mat-card fxFlex="50%">
-    <h1 data-aos="flip-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Indication</h1>
-    <hr class="line">
-    <br><br><br>
-    <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-        Endoscopic Adenoidectomy through Nasal route (Pain less procedure).
-        Phono Surgery(Thyroplasty) - for vocal chord Paralysis
-        Phono Microsurgery (Micro flap technique) for vocal chord, cyst, polyp, nodule.</p>
-        </mat-card>
-        <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-            
-                <div class="col-md-6">
-            <img src="/assets/image/throatsurgery1.jpg" height="200px" width="200px">
-        </div>
-        <div class="col-md-6">
-                <img src="/assets/image/throatsurgery2.jpg"height="200px" width="200px">
-            </div>
-
-            
-            
-            
-        </mat-card>
-        </div>
-
-    <br><br><br>
-    <div class="container"
-fxLayout
-fxLayout.xs="column"
-
-fxLayoutGap="10%"
-fxLayoutGap.xs="0">
-<mat-card fxFlex="50%">
-        <h1 data-aos="flip-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Cleft lip & palate repair with laser assisted</h1>
-        <hr class="line">
-        <br><br><br>
-        <p data-aos="flip-right" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-               <li> Tonsillectomy</li>
-               <li> Thyroid swelling</li></p>
-            </mat-card>
-            <mat-card fxFlex="50%" data-aos="flip-left" data-aos-once="false" data-aos-delay="100" data-aos-duration="1000">
-                <div class="row">
-                    <div class="col-md-3">
-                        </div>
-                        <div class="col-md-6">
-                        
-
-                            <img src="/assets/image/throat1.jpg" height="200px" width="200px">
-                            <br><u><h5 style="text-align: center">Lip palate repair</h5></u>
-                        </div>
-                        <div class="col-md-3">
-                            </div>
-
-
-                    </div>
-                    <br>
-                
-                <div class="row">
-                    <div class="col-md-6">
-                            <img src="/assets/image/throat2.jpg" height="200px" width="200px">
-                            <br><u><h5 style="text-align: center">Thyroid swelling – before treatment</h5></u>
-
-                    </div>
-                    <div class="col-md-6">
-                            <img src="/assets/image/throat3.jpg" height="200px" width="200px">
-                            <br><u><h5 style="text-align: center">Thyroid swelling – after treatment</h5></u>
-                    </div>
-                </div>
-            </mat-card>
-            </div>
-            <br><br>
-
-            <div class="container"
-            fxLayout
-            fxLayout.xs="column"
-            
-            fxLayoutGap="10%"
-            fxLayoutGap.xs="0">
-            <mat-card fxFlex="100%">
-                <h1 data-aos="flip-right" data-aos-once="false" data-aos-duration="1000" data-aos-delay="100">Surgery for Parotid & Submandibular Salivary gland & duct stone surgery
-                    </h1>
-                
-                <br><br>
-                
-                <div class="col-md-2">
-
-                </div>
-                <div class="col-md-4">
-                        <img src="/assets/image/throat4.jpg" height="200px" width="200px">
-                        <br><u><h5 style="text-align: center">Salivary gland – before treatment</h5></u>
-                    </div>
-                    <div class="col-md-4">
-                            <img src="/assets/image/throat5.jpg"height="200px" width="200px">
-                            <br><u><h5 style="text-align: center">Salivary gland – after treatment</h5></u>
-                        </div>
-                        <div class="col-md-2">
-
-                        </div>
-                
-                    </mat-card>
-                    </div>
+       
             
 
 
